# SRPC_TRY_ONE

./: CMakeLists.txt  README.md  run.sh
deploy/: client  server
include/: example.pb.h  example.srpc.h
protofile/: example.proto
src/: client.cc  client.pb_skeleton.cc  example.pb.cc  server.cc  server.pb_skeleton.cc
